--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,23 +1,27 @@
 main {
-  position: absolute;
-  top: 88px;
   height: 1000px;
   width: 100%;
-  margin-left: -7px;
+  order: 1px solid green;
 }
 
+main>h2 {
+  position: relative;
+  width: 100%;
+  font-size: 35px;
+  text-align: center;
+  top: -1000px;
+}
 main>ul {
-  width: 20%;
-  font-size: 20px;
-  position: absolute;
-  margin-left: 40%;
+  position:relative;
+  width: 40%;
+  font-size: 30px;
+  margin-left: 30%;
+  top: -965px;
 }
 
 main>div {
   width: 100%;
   background-color: white;
-  opacity: 0.7;
-  bottom: 0px;
-  position: absolute;
+  opacity: 0.6;
   height: 1000px;
 }
