--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -4,35 +4,31 @@ body {
   background-attachment: fixed;
   background-size: 100%;
 }
-#background {
-  width: 100%;
-  position: fixed;
-}
 
 header {
-  position: relative;
+  order: 1px solid red;
 }
 
 #name {
-  position: absolute;
-  top: -40px;
+  display: inline-block;
+  order: 1px solid black
 }
 
 section>h1 {
   font-size: 40px;
   font-family: cursive;
+  margin: 0;
 }
 
 #icons {
-  position: absolute;
-  top: -2px;
-  right: -2px;
+  float: right;
+  display: inline-block;
+  order: 1px solid yellow
 }
 
 #menu {
-  position: absolute;
-  right: 0px;
-  top: 4px;
+  float: right;
+  order: 1px solid orange;
 }
 
 span {
@@ -49,17 +45,18 @@ span {
   border-right: 2px solid black;
 }
 
-nav>div>p {
+nav>p {
   font-size: 30px;
+  margin: 0px;
 }
 
-nav div p a {
+nav p a {
   text-decoration: none;
   color: black;
 }
 
 a:hover{
-  color: aqua;
+  background-color: aqua;
 }
 
 #linkedin {
@@ -71,4 +68,5 @@ a:hover{
   width: 29px;
   height: 21px;
 }
+
 
